<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:id="@+id/about_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main.Info">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/background_soft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/TentangKami"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/century1"
            android:text="@string/tentang_kami"
            android:textSize="30dp"
            android:padding="15dp"
            android:textStyle="bold"
            android:textColor="@color/anime_text"
            android:layout_marginTop="20dp"
            android:layout_marginRight="150dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/century1"
            android:layout_marginRight="160dp"
            android:padding="15dp"
            android:text="@string/profile_dan_lokasi_developer"
            android:textColor="@color/anime_text"
            android:textSize="15dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/TentangKami"
            app:layout_constraintTop_toTopOf="parent" />

    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/TentangAplikasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_p"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/century1"
                android:justificationMode="inter_word"
                android:padding="15dp"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:text="@string/Tentang_aplikasi"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/IkutiKami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/century1"
        android:text="Ikuti kami"
        android:textStyle="bold"
        android:textColor="@color/anime_text"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/TentangAplikasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/Sosmed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/IkutiKami"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/Instagram"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="15dp"
            android:src="@drawable/sosmed2" />

        <ImageView
            android:id="@+id/Github"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="15dp"
            android:src="@drawable/sosmed1"/>

        <ImageView
            android:id="@+id/Facebook"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="15dp"
            android:src="@drawable/sosmed3"/>

        <ImageView
            android:id="@+id/Youtube"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="15dp"
            android:src="@drawable/sosmed4"/>

        <ImageView
            android:id="@+id/WhatsApp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="15dp"
            android:src="@drawable/sosmed5"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/century1"
        android:text="Alamat :"
        android:textColor="@color/anime_text"
        android:textSize="15dp"
        android:textStyle="bold"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/Sosmed"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/Jalan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/century1"
        android:text="@string/Alamat"
        android:textColor="@color/anime_text"
        android:textSize="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/Sosmed"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/century1"
        android:text="@string/Lokasi"
        android:textColor="@color/anime_text"
        android:textSize="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="3dp"
        app:layout_constraintTop_toBottomOf="@id/Jalan"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@color/background_p"
        app:itemIconTint="@color/icon_normal"
        app:itemIconSize="30dp"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_about_anime"/>

</androidx.constraintlayout.widget.ConstraintLayout>